[package]
name = "bycycle-book-wordcount"
version = "0.1.0"
authers = ["Yasunori Ishiguro"]
edition = "2021"
licence = "MIT OR Apache-2.0"
description = "シンプルな文字、単語及び行の出現頻度を数える機能を提供します。"
repository = "https://github.com/xjr1300/wordcount"
categories = ["command-line-utilities"]
keywords = ["example", "frequency", "text"]

[badges]
appveyor = { repository = "https://ci.appveyor.com/project/xjr1300/wordcount" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
